# aws-iot-device-sdk-embedded-C

./: CMakeLists.txt  aws.kconf
demos/: iot_config.h
demos/logging-stack/: logging_stack.h
libraries/aws/common/include/: aws_iot.h
libraries/aws/common/src/: aws_iot_parser.c
libraries/aws/provisioning/src/: aws_iot_provisioning_parser.c
libraries/aws/shadow/include/: aws_iot_shadow.h
libraries/aws/shadow/include/types/: aws_iot_shadow_types.h
libraries/aws/shadow/src/: aws_iot_shadow_api.c  aws_iot_shadow_operation.c  aws_iot_shadow_subscription.c
libraries/aws/shadow/src/private/: aws_iot_shadow_internal.h
libraries/standard/common/include/: iot_linear_containers.h
libraries/standard/common/include/types/: iot_taskpool_types.h
libraries/standard/common/src/: iot_init.c  iot_taskpool.c
libraries/standard/mqtt/src/: iot_mqtt_api.c  iot_mqtt_network.c  iot_mqtt_serialize.c
platform/: CMakeLists.txt  icon_hal
ports/icon_hal/: icon_hal.cmake
ports/icon_hal/include/: iot_platform_types_icon_hal.h
ports/icon_hal/src/: iot_clock_icon_hal.c  iot_network_mbedtls.c  iot_port_mem_helper.c  iot_port_mem_helper.h  iot_threads_icon_hal.c
tests/: iot_config.h
